# cogent3-ete3

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  testing_develop.yml
data/: algn.fasta  tree_large_scale.newick
src/cogent3_ete3/: __init__.py  extension.py  interconvert.py  style.py
src/ete3_plugin/: __init__.py
src/myproject/: __init__.py  cli.py  extension.py  trs_tree.py
tests/: test_myproject.py  test_style.py  test_trs_tree.py
tests/data/: test_tree.newick  test_tree_withsupport.newick
