[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cogent3-ete3"
authors = [
    { name = "Yapeng Lang", email = "u7181074@anu.edu.au"},
]
keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["cogent3", "ete3", "six", "PyQt5"]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
# the following are inferred from the source code
dynamic = ["version", "description"]


[project.urls]
"Bug Tracker" = "https://github.com/YapengLang/cogent3-ete3/issues"
"Source Code" = "https://github.com/YapengLang/cogent3-ete3"

[project.sdist]
include = ["src/*", "pyproject.toml"]



[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox",
]
dev = [
    "black",
    "click",
    "docformatter",
    "flit",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true

[project.entry-points."cogent3.app"]
cogent3_to_ete3 = "cogent3_ete3.interconvert:cogent3_to_ete3"
ete3_to_cogent3 = "cogent3_ete3.interconvert:ete3_to_cogent3"
ete3_colour_edge = "cogent3_ete3.style:ete3_colour_edge"